syntax = "proto3";

package wres.statistics.generated;

import "double_score_metric.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "DoubleScoreStatisticProto";
option java_multiple_files = true;

message DoubleScoreStatistic
{
    /*A message that encapsulates a score statistic, which is the product of 
    applying a score metric to a pool of pairs.*/

    DoubleScoreMetric metric = 1;
    // The score metric.

    repeated DoubleScoreStatisticComponent statistics = 2;
    // The score components.

    int32 sample_size = 3;
    // The number of pairs from which the statistic was computed.
    
    message DoubleScoreStatisticComponent
    {
        // A score component.
    
        DoubleScoreMetric.DoubleScoreMetricComponent metric = 1;
        // A description of the metric component.
        
        double value = 2;
        // Score component value.        
    }
}