syntax = "proto3";

package wres.statistics.generated;

import "duration_score_metric.proto";
import "google/protobuf/duration.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "DurationScoreStatisticProto";
option java_multiple_files = true;


/* A message that encapsulates a score statistic, which is the product of 
applying a score metric to a pool of pairs. */

message DurationScoreStatistic
{
    /* This could be promoted to an Evaluation; however, there is one 
    DurationScoreMetric per DurationScoreStatistic while the atomic collection 
    is a pool, so there is no efficiency to be gained and some context to be 
    lost.*/
    DurationScoreMetric metric = 1;

    /* The duration score components. This could be abstracted with repeated 
    durations and an implicit ordering based on the ordering in 
    DurationScoreMetric instead */
    repeated DurationScoreStatisticComponent statistics = 2;

    // A diagram component
    message DurationScoreStatisticComponent
    {
        // Metric component name
        DurationScoreMetric.DurationScoreMetricComponent.DurationScoreComponentName name = 1;

        // Component value
        google.protobuf.Duration value = 2;
    }

}