syntax = "proto3";

package wres.statistics.generated;

import "wresproto/boxplot_metric.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "BoxplotStatisticProto";
option java_multiple_files = true;

message BoxplotStatistic
{
    // A message that encapsulates a box plot statistic.

    BoxplotMetric metric = 1;
    // The metric.
    
    repeated Box statistics = 2;
    // The boxes.
    
    message Box 
    {
        // A box.

        double linked_value = 1;
        // The value alongside which the box should be shown.

        repeated double quantiles = 2;
        // The whiskers.
    }
}